--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,467 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    >
+    <title>Museum</title>
+    <link
+      rel="shortcut icon"
+      href="favicon.ico"
+      type="image/x-icon"
+    >
+    <link
+      rel="stylesheet"
+      href="./styles/main.scss"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header header--margin-bottom">
+      <img
+        src="images/main-image.jpg"
+        alt="main-image"
+        class="header__main-image"
+      >
+      <div class="container">
+        <div class="header__content">
+          <a
+            href="#menu"
+            class="icon icon--menu header__menu-icon"
+          ></a>
+          <a
+            href="#"
+            class="header__logo logo"
+          >
+            <img
+              src="images/icons/logo.svg"
+              alt="logo"
+              class="header__logo-image"
+            >
+          </a>
+          <div class="header__info-container">
+            <h1 class="header__title">
+              ХУДОЖНІЙ <br>
+              МУЗЕЙ
+            </h1>
+            <a
+              href="#events"
+              class="header__button"
+            >
+              <span class="header__button-value">КВИТКИ</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <nav
+        class="header__navigation navigation"
+        id="menu"
+      >
+        <div class="container">
+          <div class="navigation__row">
+            <div class="navigation__item">
+              <ul class="navigation__menu-list">
+                <li>
+                  <a
+                    href="#galery"
+                    class="navigation__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="#subscribe"
+                    class="navigation__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="#events"
+                    class="navigation__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="#footer"
+                    class="navigation__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="navigation__item">
+              <span class="navigation__work-time-title">
+                Графік роботи
+              </span>
+              <div class="navigation__work-time-block">
+                <ul class="navigation__work-time-list">
+                  <li><strong>12:00 — 20:00</strong> середа</li>
+                  <li><strong>12:00 — 20:00</strong> четвер</li>
+                  <li><strong>12:00 — 20:00</strong> п’ятниця</li>
+                  <li><strong>11:00 — 19:00</strong> субота</li>
+                  <li><strong>11:00 — 19:00</strong> неділя</li>
+                </ul>
+                <p class="navigation__days-off">
+                  <strong>Вихідні:</strong> понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section
+        class="actual-date actual-date--margin-bottom"
+        id="events"
+      >
+        <div class="container">
+          <h2 class="actual-date__title title title--color-dark">
+            Актуальні події
+          </h2>
+          <div class="actual-date__block">
+            <div class="actual-date__image-part">
+              <img
+                src="images/date-image-1.jpeg"
+                alt="image"
+                class="actual-date__image"
+              >
+            </div>
+            <div class="actual-date__info-part">
+              <div class="actual-date__time-info">
+                <span class="actual-date__category">
+                  ВИСТАВКА
+                </span>
+                <span class="actual-date__period">
+                  26.08-29.11.2019
+                </span>
+              </div>
+              <h3 class="actual-date__subtitle subtitle">
+                Йду і повертаюсь
+              </h3>
+              <p class="actual-date__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="actual-date__block">
+            <div class="actual-date__image-part">
+              <img
+                src="images/date-image-2.jpeg"
+                alt="image"
+                class="actual-date__image"
+              >
+            </div>
+            <div class="actual-date__info-part">
+              <div class="actual-date__time-info">
+                <span class="actual-date__category">
+                  ВИСТАВКА
+                </span>
+                <span class="actual-date__period">
+                  26.08-29.11.2019
+                </span>
+              </div>
+              <h3 class="actual-date__subtitle subtitle">
+                І спогади і мрії
+              </h3>
+              <p class="actual-date__description">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="lection lection--margin-bottom">
+        <div class="container">
+          <div class="lection__content">
+            <div class="lection__time-info">
+              <span class="lection__category">
+                ЛЕКЦІЯ
+              </span>
+              <span class="lection__date">
+                26/08/2019 - 11:00
+              </span>
+            </div>
+            <h3 class="lection__name">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+      <div
+        class="galery-ancor"
+        id="galery"
+      ></div>
+      <section class="galery-slider galery-slider--margin-bottom">
+        <div class="galery-slider__content">
+          <div class="container">
+            <h2 class="galery-slider__title title title--color-dark">
+              Галерея
+            </h2>
+          </div>
+          <div class="galery-slider__owl-carousel owl-carousel">
+            <div class="galery-slider__owl-carousel-slide slide">
+              <img
+                src="images/galery-image-1.jpeg"
+                alt="bild-1"
+                class="galery-slider__owl-carousel-image"
+              >
+            </div>
+            <div class="galery-slider__owl-carousel-slide slide">
+              <img
+                src="images/galery-image-2.jpeg"
+                alt="bild-2"
+                class="galery-slider__owl-carousel-image"
+              >
+            </div>
+            <div class="galery-slider__owl-carousel-slide slide">
+              <img
+                src="images/galery-image-3.jpeg"
+                alt="bild-3"
+                class="galery-slider__owl-carousel-image"
+              >
+            </div>
+            <div class="galery-slider__owl-carousel-slide slide">
+              <img
+                src="images/galery-image-4.jpeg"
+                alt="bild-4"
+                class="galery-slider__owl-carousel-image"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="galery-grid galery-grid--margin-bottom">
+        <div class="container">
+          <h2 class="galery-grid__title title title--color-dark">
+            Галерея
+          </h2>
+          <div class="galery-grid__row galery-grid__row--heith-600">
+            <div class="galery-grid__item galery-grid__item--width-small">
+              <img
+                src="images/galery-image-1.jpeg"
+                alt="bild-1"
+                class="galery-grid__image"
+              >
+            </div>
+            <div class="galery-grid__item galery-grid__item--width-big">
+              <img
+                src="images/galery-image-2.jpeg"
+                alt="bild-1"
+                class="galery-grid__image"
+              >
+            </div>
+          </div>
+          <div class="galery-grid__row galery-grid__row--heith-300">
+            <div class="galery-grid__item galery-grid__item--width-big">
+              <img
+                src="images/galery-image-3.jpeg"
+                alt="bild-1"
+                class="galery-grid__image"
+              >
+            </div>
+            <div class="galery-grid__item galery-grid__item--width-small">
+              <img
+                src="images/galery-image-4.jpeg"
+                alt="bild-1"
+                class="galery-grid__image"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section
+        class="subscribe"
+        id="subscribe"
+      >
+        <div class="container">
+          <h2 class="subscribe__title title title--color-light">
+            Підписка
+          </h2>
+          <span class="subscribe__sub-info">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </span>
+          <form
+            action="/"
+            method="post"
+            class="subscribe__form"
+          >
+            <input
+              type="email"
+              class="subscribe__input"
+              name="email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="subscribe__button"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__link-container">
+            <div class="footer__logo logo">
+              <a
+                href="#"
+                class="footer__logo-link"
+              >
+                <img
+                  src="images/icons/logo.svg"
+                  alt="logo"
+                  class="footer__logo-image"
+                >
+              </a>
+            </div>
+            <div class="footer__social-row">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__social-item"
+                target="_blank"
+              >
+                <img
+                  src="images/icons/facebook.svg"
+                  alt="facebook"
+                  class="footer__social-image icon"
+                >
+              </a>
+              <a
+                href="https://www.instagram.com/"
+                class="footer__social-item"
+                target="_blank"
+              >
+                <img
+                  src="images/icons/instagram.svg"
+                  alt="instagram"
+                  class="footer__social-image icon"
+                >
+              </a>
+            </div>
+          </div>
+          <div class="footer__block">
+            <div class="footer__info-row">
+              <div class="footer__info-item">
+                <span class="footer__info-title">
+                  Графік роботи
+                </span>
+                <ul class="footer__info-list">
+                  <li><strong>12:00 — 20:00</strong> середа</li>
+                  <li><strong>12:00 — 20:00</strong> четвер</li>
+                  <li><strong>12:00 — 20:00</strong> п’ятниця</li>
+                  <li><strong>11:00 — 19:00</strong> субота</li>
+                  <li><strong>11:00 — 19:00</strong> неділя</li>
+                </ul>
+                <p class="footer__day-off">
+                  <strong>Вихідні</strong> понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+              <div class="footer__info-item">
+                <span class="footer__info-title">
+                  Контакти:
+                </span>
+                <a
+                  href="https://goo.gl/maps/gsTNq5ZWyFYBYkuEA"
+                  class="footer__info-link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a
+                  href="tel:+380442781357"
+                  class="footer__info-link"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a
+                  href="#"
+                  class="footer__info-link"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__info-link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+              <a
+                href="#"
+                class="footer__up-link"
+              ></a>
+            </div>
+
+            <nav class="footer__navigation">
+              <ul class="footer__menu">
+                <li class="footer__menu-item">
+                  <a
+                    href="#galery"
+                    class="footer__menu-link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a
+                    href="#subscribe"
+                    class="footer__menu-link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a
+                    href="#events"
+                    class="footer__menu-link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a
+                    href="#footer"
+                    class="footer__menu-link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="footer__copirait-row">
+          <span class="footer__copirait-item">
+            Designed by Zhyriada Marina
+          </span>
+          <span class="footer__copirait-item">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+        </div>
+      </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts/owl.carousel.min.js"></script>
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+    ></script>
   </body>
 </html>
