--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,514 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/logo.svg"
+    >
+    <link rel="stylesheet" href="./styles/import.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__bg"></div>
+      <div class="header__container">
+        <div class="header__content">
+          <div class="header__top top-bar">
+            <a href="#menu" class="top-bar__menu-link">
+              <img
+                 src="./images/icons/burger-menu.svg"
+                 alt="burger menu">
+            </a>
+            <a href="#" class="top-bar__logo-link">
+              <img
+              src="./images/logo.svg"
+              alt="logo"
+              >
+            </a>
+          </div>
+
+          <div class="header__bottom">
+            <h1 class="header__title">
+              ХУДОЖНІЙ МУЗЕЙ
+            </h1>
+          </div>
+          <div class="header__button button">
+            <a href="#actual-events" class="button__link">
+              <div class="button__text">
+                КВИТКИ
+              </div>
+              <div class="button__btn">
+                <img
+                  src="./images/arrow-right.svg"
+                  alt="arror right"
+                >
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="header__events">
+          <div class="header__events-line"></div>
+          <p class="header__events-text">
+            ПОДІЇ
+          </p>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__content">
+        <div class="menu__top">
+          <a href="#" class="menu__icon-close">
+            <img
+              src="./images/icons/icon-close.svg"
+              alt="icon close"
+              class="menu__icon-close-img"
+            >
+          </a>
+          <nav class="menu__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link">
+                  Про нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#actual-events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#about-us" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__schedule schedule">
+          <p class="schedule__title">
+            Графік роботи
+          </p>
+          <ul class="schedule__list">
+            <li class="schedule__item">
+              <p class="schedule__text">
+                <span class="schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                середа
+              </p>
+            </li>
+            <li class="schedule__item">
+              <p class="schedule__text">
+                <span class="schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                четвер
+              </p>
+            </li>
+            <li class="schedule__item">
+              <p class="schedule__text">
+                <span class="schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                п'ятниця
+              </p>
+            </li>
+            <li class="schedule__item">
+              <p class="schedule__text">
+                <span class="schedule__text--bold">
+                  11:00 — 19:00
+                </span>
+                субота
+              </p>
+            </li>
+            <li class="schedule__item">
+              <p class="schedule__text">
+                <span class="schedule__text--bold">
+                  11:00 — 19:00
+                </span>
+                неділя
+              </p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="menu__bottom">
+          <p class="menu__bottom-text">
+            <span class="menu__bottom-text--bold">
+              Вихідні:
+            </span>
+            понеділок, вівторок
+            <br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+      </div>
+      <div class="menu__bg"></div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section class="actual-events" id="actual-events">
+          <div class="actual-events__container">
+            <h2 class="actual-events__title">
+              Актуальні події
+            </h2>
+            <article class="actual-events__event event">
+              <img
+                src="./images/events-1.png"
+                alt="event 1"
+                class="event__photo--1"
+              >
+              <div class="event__info">
+                <div class="event__subtitle">
+                  <p class="event__show event__show--text">
+                    ВИСТАВКА
+                  </p>
+                  <p class="event__show event__show--time">
+                    26.08-29.11.2019
+                  </p>
+                </div>
+                <div class="event__title-block">
+                  <h3 class="event__title">
+                    Йду і повертаюсь
+                  </h3>
+                  <div class="event__cube"></div>
+                </div>
+                <p class="event__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="actual-events__event event">
+              <img
+                src="./images/events-2.png"
+                alt="event 2"
+                class="event__photo event__photo--2"
+              >
+              <div class="event__info">
+                <div class="event__subtitle">
+                  <p class="event__show event__show--text">
+                    ВИСТАВКА
+                  </p>
+                  <p class="event__show event__show--time">
+                    26.08-29.11.2019
+                  </p>
+                </div>
+                <div class="event__title-block">
+                  <h3 class="event__title">
+                    І спогади і мрії
+                  </h3>
+                  <div class="event__cube"></div>
+                </div>
+                <p class="event__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+
+          <img
+            src="./images/events-3.png"
+            alt="event 3"
+            class="event__photo event__photo--3"
+          >
+          <div class="event__box">
+            <article class="actual-events__event event">
+              <div class="event__container">
+                <div class="event__subtitle event__subtitle--bottom">
+                  <p class="event__show event__show--text">
+                    ЛЕКЦІЯ
+                  </p>
+                  <p class="event__show event__show--time">
+                    26/08/2019 - 11:00
+                  </p>
+                </div>
+                <h3 class="event__title event__title--bottom">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </article>
+          </div>
+        </section>
+
+        <section class="gallery" id="gallery">
+          <div class="gallery__container">
+            <h2 class="gallery__title">
+              Галерея
+            </h2>
+            <div class="gallery__photo-box">
+              <img
+                src="./images/gallery-1.png"
+                alt="gallery-1"
+                class="gallery__photo gallery__photo--1"
+              >
+
+              <img
+                src="./images/gallery-2-tablet.png"
+                alt="gallery-2-tablet"
+                class="gallery__photo gallery__photo--2-tablet"
+              >
+
+              <img
+                src="./images/gallery-2.png"
+                alt="gallery-2"
+                class="gallery__photo gallery__photo--2"
+              >
+
+              <img
+                src="./images/gallery-3.png"
+                alt="gallery-3"
+                class="gallery__photo gallery__photo--3"
+              >
+
+              <img
+                src="./images/gallery-4.png"
+                alt="gallery-4"
+                class="gallery__photo gallery__photo--4"
+              >
+            </div>
+            <div class="slider">
+              <a href="#" class="slider__dot slider__dot--active"></a>
+              <a href="#" class="slider__dot"></a>
+              <a href="#" class="slider__dot"></a>
+              <a href="#" class="slider__dot"></a>
+            </div>
+          </div>
+        </section>
+
+        <section class="subscription" id="subscription">
+          <div class="subscription__bg">
+            <div class="subscription__container">
+              <h2 class="subscription__title">
+                Підписка
+              </h2>
+              <p class="subscription__text">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <div class="subscription__form-content">
+                <form
+                  action="#"
+                  method="get"
+                  class="subscription__form"
+                  onsubmit="this.reset(); return false;"
+                >
+                  <input
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="subscription__input"
+                    required
+                  >
+                  <button class="subscription__button" type="submit">
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="about-us" id="about-us">
+          <div class="about-us__container">
+            <div class="about-us__info">
+              <div class="about-us__nav">
+                <a href="#" class="top-bar__logo-link">
+                  <img
+                  src="./images/logo.svg"
+                  alt="logo"
+                  >
+                </a>
+                <div class="about-us__icons">
+                  <a href="#" class="about-us__link-icon">
+                    <img
+                      src="./images/icons/facebook.svg"
+                      alt="facebook"
+                      class="about-us__icon-img about-us__icon-img--1"
+                    >
+                  </a>
+
+                  <a href="#" class="about-us__link-icon">
+                    <img
+                      src="./images/icons/instagram.svg"
+                      alt="instagram"
+                      class="about-us__icon-img about-us__icon-img--2"
+                    >
+                  </a>
+                </div>
+              </div>
+              <div class="about-us__information">
+                <div class="about-us__schedule schedule">
+                  <p class="schedule__title schedule__title--bottom">
+                    Графік роботи
+                  </p>
+                  <ul class="schedule__list">
+                    <li class="schedule__item">
+                      <p class="schedule__text schedule__text--bottom">
+                        <span class="schedule__text--bold">
+                          12:00 — 20:00
+                        </span>
+                        середа
+                      </p>
+                    </li>
+                    <li class="schedule__item">
+                      <p class="schedule__text schedule__text--bottom">
+                        <span class="schedule__text--bold">
+                          12:00 — 20:00
+                        </span>
+                        четвер
+                      </p>
+                    </li>
+                    <li class="schedule__item">
+                      <p class="schedule__text schedule__text--bottom">
+                        <span class="schedule__text--bold">
+                          12:00 — 20:00
+                        </span>
+                        п'ятниця
+                      </p>
+                    </li>
+                    <li class="schedule__item">
+                      <p class="schedule__text schedule__text--bottom">
+                        <span class="schedule__text--bold">
+                          11:00 — 19:00
+                        </span>
+                        субота
+                      </p>
+                    </li>
+                    <li class="schedule__item">
+                      <p class="schedule__text schedule__text--bottom">
+                        <span class="schedule__text--bold">
+                          11:00 — 19:00
+                        </span>
+                        неділя
+                      </p>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="schedule__contacts contacts">
+                  <p class="contacts__title">
+                    Контакти:
+                  </p>
+                  <div class="contacts__address">
+                    <a
+                      href="https://goo.gl/maps/dwEfHim5QasmyC4p6"
+                      class="contacts__link"
+                      target="_blank"
+                    >
+                    вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                  </div>
+
+                  <div class="contacts__phone">
+                    <a
+                      href="tel:+38 (044) 278-13-57"
+                      class="contacts__link"
+                    >
+                    тел. +38 (044) 278-13-57
+                    </a>
+                  </div>
+
+                  <div class="contacts__fax">
+                    <a
+                      href="tel:+38 (044) 278-74-54"
+                      class="contacts__link"
+                    >
+                    факс +38 (044) 278-74-54
+                    </a>
+                  </div>
+
+                  <div class="contacts__email">
+                    <a
+                      href="mailto:info@namu.kiev.ua"
+                      class="contacts__link"
+                    >
+                    e-mail: info@namu.kiev.ua
+                    </a>
+                  </div>
+                </div>
+
+                <div class="schedule__text-bottom">
+                  <p class="schedule__text schedule__text--bottom">
+                      Вихідні:
+                    понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </p>
+                </div>
+
+
+                <div class="about-us__back">
+                  <a href="#" class="about-us__back-link">
+                    <img
+                    src="./images/arrow-up.svg"
+                    alt="arrow-up"
+                    class="about-us__arrow-up"
+                    >
+                  </a>
+                </div>
+
+
+              </div>
+              <div class="about-us__underline"></div>
+
+              <div class="about-us__info-nav">
+                <nav class="nav-bottom">
+                  <ul class="nav-bottom__list">
+                    <li class="nav-bottom__item">
+                      <a href="#gallery" class="nav-bottom__link">
+                        Галерея
+                      </a>
+                    </li>
+                    <li class="nav-bottom__item">
+                      <a href="#subscription" class="nav-bottom__link">
+                        Про нас
+                      </a>
+                    </li>
+                    <li class="nav-bottom__item">
+                      <a href="#actual-events" class="nav-bottom__link">
+                        Виставки та події
+                      </a>
+                    </li>
+                    <li class="nav-bottom__item ">
+                      <a href="#contacts" class="nav-bottom__link">
+                        Контакти
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__text">
+          <p class="footer__designed">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
